tests/ui/endpoint/custom_uri_missing.stderr
error: Missing `uri` attribute (e.g. `#[endpoint(uri = "custom_endpoint")]`)
 --> $DIR/custom_uri_missing.rs:8:1
  |
8 | #[endpoint(method = "gotham_restful::gotham::hyper::Method::GET")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> $DIR/custom_uri_missing.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
